# Django-Financial-API-Template

./: .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  VSCODE_SETUP.md  django-financial-api.code-workspace  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
api/: admin.py  models.py  serializers.py  tests.py  throttling.py  urls.py  views.py
api/migrations/: 0001_initial.py
config/: settings.py  urls.py
core/: __init__.py  types.py
docs/: ACTIVITY_PLAN.md  PHASE1-COMPLETION-SUMMARY.md  PHASE2-COMPLETION-SUMMARY.md  current-state-assessment.md  upgrade-roadmap.md
docs/assets/: django-module-map-dark.mmd  django-module-map-light.mmd
requirements/: base.txt  development.txt  production.txt  testing.txt
tests/: __init__.py  conftest.py
tests/factories/: __init__.py  transaction_factory.py  user_factory.py
tests/integration/: test_transaction_lifecycle.py
tests/unit/: __init__.py  test_models.py  test_serializers.py  test_swagger.py  test_views.py
